fix: Anonymous login page now visible if not logged in

--- a/diversitytracker.web/src/shared_pages/AnonymousLogin.css
+++ b/diversitytracker.web/src/shared_pages/AnonymousLogin.css
@@ -42,3 +42,57 @@
 
         transition: all 350ms ease-in-out;
     }
+
+
+    .anonymouspagesign-container a{
+        margin-top: 1.7rem;
+        color: #fff;
+
+        align-items: flex-start;
+        appearance: auto;
+        background-color: #00C424;
+        border: 0.606061px solid #3A8FFB;
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 2px 0px 0px;
+        box-sizing: border-box;
+        cursor: pointer;
+        margin: 27.2px 0px 0px;
+        padding: 6px 15px;
+        place-items: flex-start normal;
+        position: relative;
+        transition-duration: 0.35s;
+        transition-timing-function: ease-in-out;
+        user-select: none;
+        
+        background-color: #00c4a0;
+        transition: all 350ms ease-in-out;
+    }
+
+    .anonymouspagesign-container a:hover{
+        background-color: #00c424 !important;
+        color: #fff !important;
+        border: 1px solid #00c424;
+
+        transition: all 350ms ease-in-out;
+    }
+
+
+
+
+    button.ant-btn.css-dev-only-do-not-override-1qfezbu.ant-btn-default.anonymouspagesign__btn {
+        align-items: flex-start;
+        appearance: auto;
+        background-color: #00C424;
+        border: 0.606061px solid #3A8FFB;
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 2px 0px 0px;
+        box-sizing: border-box;
+        cursor: pointer;
+        margin: 27.2px 0px 0px;
+        padding: 4px 15px;
+        place-items: flex-start normal;
+        position: relative;
+        transition-duration: 0.35s;
+        transition-timing-function: ease-in-out;
+        user-select: none;
+    }
